# dotfiles-old

./: .gitignore  Commit.sh  RunningVimrc_Cmd.txt  bookmarks_10_21_21.html  bootstrap - Copy.sh  bootstrap.bat  bootstrap.sh  bootstrap.sh~  vim_keys.txt
VIM-Ebook/: Mastering Vim Quickly From WTF to OMG in no time by Jovica Ilic (z-lib.org).epub
XConf/: Xresources  Xresources.cygwin
alacrittyConf/: alacritty.yml
bashConf/: bashrc
config/bspwm/: bspwmrc  env.sh  panel.sh  panel_bar.sh  panel_colors-bak.sh  panel_colors.sh  wdr2-ruhrgebiet.m3u
config/dunst/: dunstrc  dunstrc.bak
config/feh/: themes
config/herbstluftwm/: autostart  autostart-201907242028.backup  hlwm-keybindings  hlwm-keybindings-cygwin  hlwm-rules  hlwm-theming  lock.sh  notify.sh  toggleexternalmonitor.sh
config/polybar/: launch1.sh
config/ranger/: bookmarks  commands_full.py  history  rc.conf  scope.sh
config/sxhkd/: sxhkdrc
config/termite/: config  config-201908192016.backup  config-202110302325.backup  config.back  update_termite
config/tint2/: tint2rc  tint2rc.backup.1612038911
config/zathura/: zathurarc
etc/: .xinitrc  early-issue  environment  fstab  fstab.example  issue  nginx.conf  oblogout.conf  pacman.conf  vconsole.conf  vsftpd.conf  xinitrc
etc/networkd/: set_locale.sh  set_network.sh  set_zoneinfo.sh
git/: .gitconfig  .gitignore_global
mpd/: An installation and setup guide for mopidy on Arch Linux-.url  mopidy.conf  mpd.conf  mpd.state  mpdstate
mpd/playlists/: Drake.m3u  (+23 more)
mutt/: account.com.gmail.ewheezy204  account.com.gmail.heinsteinh  account.fr.yahoo.fheinstein  account.fr.yahoo.fkheinstein  gpg.rc  mailcap  mutt-passwords  mutt-passwords.gpg  mutt-passwords.gpg-201906302301.backup  mutt-signature  muttrc  muttrc-201907010909.backup  muttrc.backup  muttrc.backup1
ncmpcpp/: browser.conf  clock.conf  config  config-test  coverart.sh  layout-music-workspace.sh  lyrics.conf  playlist.conf  visualizer.conf
newsbeuter/: config  config.buk  history.cmdline  urls
polybar/: config.ini
system/: .alias  .alias_applications  .alias_pacman  .alias_systems  alias  env
tmuxConf/: tmux.conf  tmux.conf.bak
vimConf/: Vim-link-resource.txt  vimrc  vimrc.2021.10.25  vimrc.2021.10.29  vimrc_conf  vimrc_fzf  vimrc_learn  wind_mgnt_mapping.vim
vimConf/vim-cmake-boilerplate/: CMakeLists.txt  compile_commands.json
vimConf/vim-cmake-boilerplate/src/: main.cpp  tags
zshConf/: zsh_profile  zshenv  zshrc  zshrc~
(+189 files in other folders)
